plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.10'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'

}

group = 'com.scaling'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor

    }
}



repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation group: 'org.apache.opennlp', name: 'opennlp-tools', version: '2.1.1'
    //형태소 분석기
    implementation 'com.github.shin285:KOMORAN:3.3.4'


    // https://mvnrepository.com/artifact/com.github.tomakehurst/wiremock
    testImplementation group: 'com.github.tomakehurst', name: 'wiremock', version: '2.27.2'

    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.5'

    // https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient
    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.2'

    // https://mvnrepository.com/artifact/edu.stanford.nlp/stanford-corenlp
    implementation group: 'edu.stanford.nlp', name: 'stanford-corenlp', version: '4.4.0'
    implementation 'edu.stanford.nlp:stanford-corenlp:4.2.2:models'

    implementation 'com.github.shin285:KOMORAN:3.3.4'





    // queryDSL 설정
    implementation "com.querydsl:querydsl-jpa"
    implementation "com.querydsl:querydsl-core"
    implementation "com.querydsl:querydsl-collections"
    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa" // querydsl JPAAnnotationProcessor 사용 지정
    annotationProcessor "jakarta.annotation:jakarta.annotation-api" // java.lang.NoClassDefFoundError (javax.annotation.Generated) 대응 코드
    annotationProcessor "jakarta.persistence:jakarta.persistence-api" // java.lang.NoClassDefFoundError (javax.annotation.Entity) 대응 코드

    implementation group: 'org.json', name: 'json', version: '20220924'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.1'

    implementation 'org.apache.lucene:lucene-core:8.11.1'
    implementation group: 'org.apache.lucene', name: 'lucene-analysis-common', version: '9.5.0'
    implementation group: 'org.apache.lucene', name: 'lucene-queryparser', version: '8.8.2'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
    implementation 'org.apache.lucene:lucene-core:8.8.2'


}


tasks.named('test') {
    useJUnitPlatform()
}


// Querydsl 설정부
def generated = 'src/main/generated'

// querydsl QClass 파일 생성 위치를 지정
tasks.withType(JavaCompile) {
    options.getGeneratedSourceOutputDirectory().set(file(generated))
}

// java source set 에 querydsl QClass 위치 추가
sourceSets {
    main.java.srcDirs += [ generated ]
}

// gradle clean 시에 QClass 디렉토리 삭제
clean {
    delete file(generated)
}

